[package]
name = "rss-to-json"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
rss = { version = "2.0.2", features = ["serde"] }
reqwest = "0.11.14"
quickxml_to_serde = "0.5.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
